kubernetes-example/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  labels:
    app: ingress-svc
  annotations:
    f5.destination: 10.1.10.50
    f5.vs__ProfileHTTP: /Common/http
    f5.vs__AdvPolicies: /Common/ingress
    kubernetes.io/ingress.class: "f5.bigip"
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30245
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ingress-svc
